src/main/java/com/example/mockstalk/common/error/BaseException.java
package com.example.mockstalk.common.error;

import lombok.Getter;

@Getter
public class BaseException extends RuntimeException {

    ExceptionCode errorCode;

    public BaseException(ExceptionCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}